--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@ header {
   gap: 50px;
   width: 100%;
   min-height: 300px;
+  max-height: calc((300px * 3) + (50px * 2) + 100px);
+  overflow: hidden;
   background: #fff;
   padding: 50px;
   justify-content: start;
@@ -522,6 +524,8 @@ footer a:hover {
     grid-template-columns: 1fr;
     gap: 30px;
     padding: 30px;
+    max-height: calc((300px * 12) + (30px * 11) + 60px);
+    overflow: hidden;
   }
   
   .gallery {
