--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ header {
 
 .mosaic-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 300px));
+  grid-template-columns: repeat(4, 300px);
   gap: 50px;
   width: 100%;
   min-height: 300px;
