--- a/about.html
+++ b/about.html
@@ -274,9 +274,9 @@ footer a:hover {
 <div class="about-content">
   <div class="about-left">
     <h2>About</h2>
-    <p>FR Sebastian Verdon est un photographe basé en Suisse, spécialisé dans la documentation photographique d'expositions et la reproduction d'œuvres d'art. En dialogue avec les artistes et les institutions, son travail vise à créer une archive visuelle précise et objective des œuvres d'art et de leurs contextes d'exposition.</p>
+    <p>Sebastian Verdon est un photographe basé en Suisse, spécialisé dans la documentation photographique d'expositions et la reproduction d'œuvres d'art. En dialogue avec les artistes et les institutions, son travail vise à créer une archive visuelle précise et objective des œuvres d'art et de leurs contextes d'exposition.</p>
     
-    <p>EN Sebastian Verdon is a Switzerland-based photographer specializing in the photographic documentation of exhibitions and the reproduction of artworks. In dialogue with artists and institutions, his work aims to create a precise and objective visual archive of artworks and their exhibition contexts.</p>
+    <p>Sebastian Verdon is a Switzerland-based photographer specializing in the photographic documentation of exhibitions and the reproduction of artworks. In dialogue with artists and institutions, his work aims to create a precise and objective visual archive of artworks and their exhibition contexts.</p>
     
     <div class="image-credits">
       <p>All images courtesy the Artists, the Art Spaces, the Galleries, the Museums and Sebastian Verdon.</p>
