--- a/index.html
+++ b/index.html
@@ -690,8 +690,6 @@ document.addEventListener('DOMContentLoaded', function() {
 
 // Configuration des images - 63 images
 const artworks = [
-  { url: "hires/image1.jpg", thumb: "thumbs/image1.jpg", info: "Linda Voorwinde, Spring, 2022, Parallels Part 2: The Commuter, CAN Centre d'art Neuchâtel, 2022", artist: "Linda Voorwinde", year: "2022", location: "CAN Centre d'art Neuchâtel", exhibition: "Parallels Part 2: The Commuter" },
-const artworks = [
   { url: "hires/image1.jpg", thumb: "thumbs/image1.jpg", info: "Linda Voorwinde, <i>Spring, 2022</i>", artist: "Linda Voorwinde", year: "", location: "", exhibition: "" },
   { url: "hires/image2.jpg", thumb: "thumbs/image2.jpg", info: "Lauryn Youden, <i>To Offer You something, To Bring Relief (détail), 2020</i>, <i>Désordre sacré</i>, CAN Centre d’art Neuchâtel, 2024", artist: "Lauryn Youden", year: "2024", location: "CAN Centre d’art Neuchâtel", exhibition: "Désordre sacré" },
   { url: "hires/image3.jpg", thumb: "thumbs/image3.jpg", info: "Lauryn Youden, <i>From the Great Above She Opened her Ear to the Great Below, 2020</i>, <i>Désordre sacré</i>, CAN Centre d’art Neuchâtel, 2024", artist: "Lauryn Youden", year: "2024", location: "CAN Centre d’art Neuchâtel", exhibition: "Désordre sacré" },
@@ -778,6 +776,8 @@ const artworks = [
   { url: "hires/image84.jpg", thumb: "thumbs/image84.jpg", info: "Eva Zornio, <i>Life lives in gaps, 2021</i>, <i>Life lives in gaps/ La vie vit dans les vides</i>, EAC (les halles), 2021", artist: "Eva Zornio", year: "2021", location: "EAC (les halles)", exhibition: "Life lives in gaps/ La vie vit dans les vides" },
   { url: "hires/image85.jpg", thumb: "thumbs/image85.jpg", info: "Eva Zornio, <i>Life lives in gaps, 2021</i>, <i>Life lives in gaps/ La vie vit dans les vides</i>, EAC (les halles), 2021", artist: "Eva Zornio", year: "2021", location: "EAC (les halles)", exhibition: "Life lives in gaps/ La vie vit dans les vides" },
   { url: "hires/image86.jpg", thumb: "thumbs/image86.jpg", info: "Louis de Meuron", artist: "Louis de Meuron", year: "", location: "", exhibition: "" },
+  { url: "hires/image87.jpg", thumb: "thumbs/image87.jpg", info: "Jean-Charles de Quillacq, <i>Exhibition view, 2025</i>, <i>Daddy is Home</i>, KBCB Biel-Bienne, 2025, curated by Paul Bernard, Selma Meuli", artist: "Jean-Charles de Quillacq", year: "2025", location: "KBCB Biel-Bienne", exhibition: "Daddy is Home" },
+];
   { url: "hires/image87.jpg", thumb: "thumbs/image87.jpg", info: "Jean-Charles de Quillacq, <i>Exhibition view, 2025</i>, <i>Daddy is Home</i>, KBCB Biel-Bienne, 2025, curated by Paul Bernard, Selma Meuli", artist: "Jean-Charles de Quillacq", year: "2025", location: "KBCB Biel-Bienne", exhibition: "Daddy is Home" },
 ];
   { url: "hires/image80.jpg", thumb: "thumbs/image80.jpg", info: "Exhibition view, 2025, Le Clou d'Or, Smallville, 2025", artist: "", year: "2025", location: "Smallville", exhibition: "Le Clou d'Or" },
