--- a/about.html
+++ b/about.html
@@ -326,12 +326,14 @@ footer a:hover {
     
     <div class="address">
       <p>Sebastian Verdon<br>
-      Art Documentation Photography<br>
-      Chemin des Péreuses 6<br>
-      CH–2000 Neuchâtel<br>
+      Art Documentation<br>
+      Photography<br>
       <br>
       +41 76 576 31 31<br>
-      <a href="https://www.instagram.com/s__verdon" target="_blank">Instagram</a></p>
+      <a href="https://www.instagram.com/s__verdon" target="_blank">Instagram</a><br>
+      <br>
+      Chemin des Péreuses 6<br>
+      CH–2000 Neuchâtel</p>
     </div>
     
     <form class="contact-form" id="contactForm" action="https://formspree.io/f/xkovjbrb" method="POST">
