--- a/about.html
+++ b/about.html
@@ -330,10 +330,11 @@ footer a:hover {
       Photography<br>
       <br>
       +41 76 576 31 31<br>
-      <a href="https://www.instagram.com/s__verdon" target="_blank">Instagram</a><br>
       <br>
       Chemin des Péreuses 6<br>
-      CH–2000 Neuchâtel</p>
+      CH–2000 Neuchâtel<br>
+      <br>
+      <a href="https://www.instagram.com/s__verdon" target="_blank">Instagram</a></p>
     </div>
     
     <form class="contact-form" id="contactForm" action="https://formspree.io/f/xkovjbrb" method="POST">
