--- a/about.html
+++ b/about.html
@@ -255,6 +255,24 @@ footer a:hover {
   opacity: 0.6;
 }
 
+@media (min-width: 769px) and (max-width: 1024px) {
+  .about-content {
+    gap: 150px;
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+  
+  .about-left,
+  .about-right {
+    flex: 0 0 350px;
+    max-width: 350px;
+  }
+  
+  footer {
+    min-height: 300px;
+  }
+}
+
 @media (max-width: 768px) {
   header {
     padding: 15px;
