--- a/index.html
+++ b/index.html
@@ -475,10 +475,10 @@ footer a:hover {
   color: #333;
 }
 
-/* Responsive - Tablet */
-@media (min-width: 769px) and (max-width: 1024px) {
+/* Responsive - Tablet (iPad, tablettes) */
+@media (min-width: 769px) and (max-width: 1280px) {
   .mosaic-grid {
-    grid-template-columns: repeat(3, 300px);
+    grid-template-columns: repeat(3, 300px) !important;
     gap: 40px;
     padding: 40px;
   }
