--- a/index.html
+++ b/index.html
@@ -481,6 +481,7 @@ footer a:hover {
     grid-template-columns: repeat(3, 300px) !important;
     gap: 40px;
     padding: 40px;
+    justify-content: center;
   }
   
   header {
@@ -496,9 +497,10 @@ footer a:hover {
   }
   
   .lightbox-viewer {
-    width: calc(100% - 40px);
-    height: calc(100% - 40px);
-    margin: 20px;
+    width: 100% !important;
+    height: calc(100% - 50px) !important;
+    margin: 0 !important;
+    position: relative !important;
   }
   
   .lightbox-caption {
@@ -973,12 +975,12 @@ function loadImage(index) {
   // Clear and recreate container
   const isMobile = window.innerWidth <= 768;
   
-  // Use Medium resolution images on mobile to balance quality and performance
+  // Use Medium resolution images only on phones (not tablets)
   const imageUrl = isMobile ? artwork.url.replace('hires/', 'Medium/') : artwork.url;
   
   lightboxViewer.innerHTML = '<div id="osdViewer" style="width:100%; height:100%;"></div>';
   
-  console.log('Created osdViewer div', isMobile ? 'using Medium' : 'using hires');
+  console.log('Created osdViewer div', isMobile ? 'using Medium' : 'using hires', 'width:', window.innerWidth);
   
   // Create viewer immediately
   try {
