--- a/about.html
+++ b/about.html
@@ -326,6 +326,7 @@ footer a:hover {
       <a href="https://www.contemporaryartlibrary.org/project/interstices-at-can-centre-d-art-neuchatel-33315" target="_blank">Interstices at CAN Centre d'art Neuchâtel</a><br>
       <a href="https://www.contemporaryartlibrary.org/project/jean-charles-de-quillacq-at-kunsthaus-biel-centre-d-art-bienne-60193" target="_blank">Jean-Charles de Quillacq at Kunsthaus Biel Centre d'art Bienne</a><br>
       <a href="https://artviewer.org/francisco-sierra-at-kunstmuseum-solothurn/" target="_blank">Francisco Sierra at Kunstmuseum Solothurn</a><br>
+      <a href="https://artviewer.org/leffet-de-serre-at-abbatiale-bellelay/" target="_blank">L'Effet de serre at Abbatiale Bellelay</a><br>
       <a href="https://artviewer.org/window-grey-at-can-centre-dart-neuchatel/" target="_blank">Window Grey at CAN Centre d'art Neuchâtel</a>
     </p>
     
