--- a/about.html
+++ b/about.html
@@ -258,8 +258,8 @@ footer a:hover {
 @media (min-width: 769px) and (max-width: 1280px) {
   .about-content {
     gap: 150px;
-    margin-left: 40px;
-    margin-right: 40px;
+    margin-left: 60px;
+    margin-right: 60px;
   }
   
   .about-left,
@@ -270,6 +270,10 @@ footer a:hover {
   
   footer {
     min-height: 300px;
+  }
+  
+  footer a {
+    right: 60px;
   }
 }
 
