--- a/index.html
+++ b/index.html
@@ -496,11 +496,14 @@ footer a:hover {
     width: 280px;
   }
   
+  /* Lightbox on tablet - similar to desktop with small white frame */
   .lightbox-viewer {
-    width: 100% !important;
-    height: calc(100% - 50px) !important;
-    margin: 0 !important;
-    position: relative !important;
+    width: calc(100% - 50px);
+    height: calc(100% - 50px);
+    margin: 25px;
+    background: #fff;
+    padding: 25px;
+    position: relative;
   }
   
   .lightbox-caption {
