--- a/index.html
+++ b/index.html
@@ -475,8 +475,8 @@ footer a:hover {
   color: #333;
 }
 
-/* Responsive - Tablet (iPad, tablettes) */
-@media (min-width: 769px) and (max-width: 1280px) {
+/* Responsive - Tablet Portrait (iPad, tablettes) */
+@media (min-width: 769px) and (max-width: 1280px) and (orientation: portrait) {
   .mosaic-grid {
     grid-template-columns: repeat(3, 300px) !important;
     gap: 40px;
@@ -496,14 +496,46 @@ footer a:hover {
     width: 280px;
   }
   
-  /* Lightbox on tablet - similar to desktop with small white frame */
+  /* Keep desktop-like lightbox on tablet */
   .lightbox-viewer {
-    width: calc(100% - 50px);
-    height: calc(100% - 50px);
-    margin: 25px;
-    background: #fff;
-    padding: 25px;
-    position: relative;
+    width: calc(100% - 70px) !important;
+    height: calc(100% - 70px) !important;
+    margin: 35px !important;
+    position: relative !important;
+  }
+  
+  .lightbox-caption {
+    padding: 15px 60px;
+  }
+}
+
+/* Responsive - Tablet Landscape (iPad, tablettes) */
+@media (min-width: 769px) and (max-width: 1366px) and (orientation: landscape) {
+  .mosaic-grid {
+    grid-template-columns: repeat(4, 300px) !important;
+    gap: 40px;
+    padding: 40px 60px;
+    justify-content: center;
+  }
+  
+  header {
+    padding: 20px 60px;
+  }
+  
+  .search-input {
+    width: 200px;
+  }
+  
+  .search-input:focus {
+    width: 280px;
+  }
+  
+  /* Keep desktop-like lightbox on tablet landscape */
+  .lightbox-viewer {
+    width: calc(100% - 70px) !important;
+    height: calc(100% - 70px) !important;
+    margin: 35px !important;
+    position: relative !important;
   }
   
   .lightbox-caption {
