--- a/index.html
+++ b/index.html
@@ -583,13 +583,13 @@ footer a:hover {
   }
   
   .mosaic-grid {
-    grid-template-columns: 1fr;
-    gap: 30px;
-    padding: 30px;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 15px;
+    padding: 15px;
   }
   
   .mosaic-item {
-    aspect-ratio: 4/3;
+    aspect-ratio: 1/1;
     min-width: 0;
   }
   
