--- a/index.html
+++ b/index.html
@@ -583,9 +583,10 @@ footer a:hover {
   }
   
   .mosaic-grid {
-    grid-template-columns: repeat(3, 1fr);
-    gap: 15px;
-    padding: 15px;
+    grid-template-columns: repeat(3, 1fr) !important;
+    gap: 15px !important;
+    padding: 15px !important;
+    justify-content: start !important;
   }
   
   .mosaic-item {
