--- a/about.html
+++ b/about.html
@@ -237,8 +237,7 @@ p {
 }
 
 footer {
-  background: #fff url('sv-logo2-A4.jpg') center center no-repeat;
-  background-size: contain;
+  background: #fff;
   padding: 0;
   display: block;
   font-size: 14px;
