--- a/index.html
+++ b/index.html
@@ -610,8 +610,16 @@ footer a:hover {
     width: 200px;
   }
   
+  .search-container {
+    flex-wrap: wrap;
+  }
+  
   .search-results-count {
-    display: none;
+    display: block;
+    font-size: 11px;
+    width: 100%;
+    margin-top: 5px;
+    order: 10;
   }
   
   header {
