--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@ header {
   gap: 300px;
   margin-left: 50px;
   margin-right: 50px;
-  padding: 120px 0 50px;
+  padding: 120px 0 80px;
   min-height: calc(100vh - 170px);
 }
 
@@ -237,22 +237,25 @@ p {
 }
 
 footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
   background: #fff;
-  padding: 0;
-  display: block;
+  color: #333;
+  padding: 12px 50px;
   font-size: 14px;
-  min-height: 400px;
-  width: 100%;
-  position: relative;
+  font-weight: 400;
+  border-top: 1px solid #eee;
+  box-shadow: 0 -1px 3px rgba(0,0,0,0.05);
+  z-index: 100;
 }
 
 footer a {
-  position: absolute;
-  bottom: 20px;
-  right: 50px;
   color: #000;
   text-decoration: none;
   transition: opacity 0.3s ease;
+  float: right;
 }
 
 footer a:hover {
@@ -271,14 +274,6 @@ footer a:hover {
     flex: 0 0 350px;
     max-width: 350px;
   }
-  
-  footer {
-    min-height: 300px;
-  }
-  
-  footer a {
-    right: 60px;
-  }
 }
 
 @media (max-width: 768px) {
@@ -288,7 +283,7 @@ footer a:hover {
   
   .about-content {
     flex-direction: column;
-    padding: 100px 15px 50px;
+    padding: 100px 15px 80px;
     margin-left: 15px;
     margin-right: 15px;
     gap: 40px;
