--- a/about.html
+++ b/about.html
@@ -243,19 +243,26 @@ footer {
   right: 0;
   background: #fff;
   color: #333;
+  text-align: center;
   padding: 12px 50px;
   font-size: 14px;
   font-weight: 400;
-  border-top: 1px solid #eee;
-  box-shadow: 0 -1px 3px rgba(0,0,0,0.05);
-  z-index: 100;
+  letter-spacing: 0.5px;
+  line-height: 1;
+  z-index: 1001;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-top: none;
+  box-shadow: none;
 }
 
 footer a {
-  color: #000;
+  color: #333;
   text-decoration: none;
-  transition: opacity 0.3s ease;
-  float: right;
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: 0.5px;
 }
 
 footer a:hover {
@@ -388,6 +395,7 @@ footer a:hover {
 </div>
 
 <footer>
+  <div></div>
   <a href="index.html">Back</a>
 </footer>
 
