--- a/about.html
+++ b/about.html
@@ -303,7 +303,12 @@ footer a:hover {
   }
   
   footer {
-    padding: 12px 15px;
+    padding: 10px 15px;
+    font-size: 9px;
+  }
+  
+  footer a {
+    font-size: 9px;
   }
 }
 </style>
