--- a/index.html
+++ b/index.html
@@ -1237,6 +1237,40 @@ closeLightbox.addEventListener('click', closeLightboxFunc);
 prevImage.addEventListener('click', showPrevImage);
 nextImage.addEventListener('click', showNextImage);
 
+// Swipe functionality for mobile
+let touchStartX = 0;
+let touchEndX = 0;
+let touchStartY = 0;
+let touchEndY = 0;
+
+function handleSwipe() {
+  const swipeThreshold = 50; // Minimum distance for swipe
+  const swipeDistanceX = touchEndX - touchStartX;
+  const swipeDistanceY = touchEndY - touchStartY;
+  
+  // Only trigger swipe if horizontal movement is greater than vertical
+  if (Math.abs(swipeDistanceX) > Math.abs(swipeDistanceY)) {
+    if (swipeDistanceX > swipeThreshold) {
+      // Swipe right - previous image
+      showPrevImage();
+    } else if (swipeDistanceX < -swipeThreshold) {
+      // Swipe left - next image
+      showNextImage();
+    }
+  }
+}
+
+lightbox.addEventListener('touchstart', (e) => {
+  touchStartX = e.changedTouches[0].screenX;
+  touchStartY = e.changedTouches[0].screenY;
+}, false);
+
+lightbox.addEventListener('touchend', (e) => {
+  touchEndX = e.changedTouches[0].screenX;
+  touchEndY = e.changedTouches[0].screenY;
+  handleSwipe();
+}, false);
+
 document.addEventListener('keydown', (e) => {
   if (!lightbox.classList.contains('active')) return;
   
