--- a/index.html
+++ b/index.html
@@ -1242,34 +1242,51 @@ let touchStartX = 0;
 let touchEndX = 0;
 let touchStartY = 0;
 let touchEndY = 0;
+let isSwiping = false;
 
-function handleSwipe() {
-  const swipeThreshold = 50; // Minimum distance for swipe
+const lightboxViewer = document.getElementById('lightboxViewer');
+
+lightboxViewer.addEventListener('touchstart', (e) => {
+  // Only track single touch (not pinch/zoom)
+  if (e.touches.length === 1) {
+    touchStartX = e.touches[0].clientX;
+    touchStartY = e.touches[0].clientY;
+    isSwiping = true;
+  } else {
+    isSwiping = false;
+  }
+}, { passive: true });
+
+lightboxViewer.addEventListener('touchmove', (e) => {
+  // Disable swiping if multi-touch (zooming)
+  if (e.touches.length > 1) {
+    isSwiping = false;
+  }
+}, { passive: true });
+
+lightboxViewer.addEventListener('touchend', (e) => {
+  if (!isSwiping) return;
+  
+  touchEndX = e.changedTouches[0].clientX;
+  touchEndY = e.changedTouches[0].clientY;
+  
+  const swipeThreshold = 75; // Minimum distance for swipe
   const swipeDistanceX = touchEndX - touchStartX;
   const swipeDistanceY = touchEndY - touchStartY;
   
   // Only trigger swipe if horizontal movement is greater than vertical
-  if (Math.abs(swipeDistanceX) > Math.abs(swipeDistanceY)) {
-    if (swipeDistanceX > swipeThreshold) {
+  if (Math.abs(swipeDistanceX) > Math.abs(swipeDistanceY) && Math.abs(swipeDistanceX) > swipeThreshold) {
+    if (swipeDistanceX > 0) {
       // Swipe right - previous image
       showPrevImage();
-    } else if (swipeDistanceX < -swipeThreshold) {
+    } else {
       // Swipe left - next image
       showNextImage();
     }
   }
-}
-
-lightbox.addEventListener('touchstart', (e) => {
-  touchStartX = e.changedTouches[0].screenX;
-  touchStartY = e.changedTouches[0].screenY;
-}, false);
-
-lightbox.addEventListener('touchend', (e) => {
-  touchEndX = e.changedTouches[0].screenX;
-  touchEndY = e.changedTouches[0].screenY;
-  handleSwipe();
-}, false);
+  
+  isSwiping = false;
+}, { passive: true });
 
 document.addEventListener('keydown', (e) => {
   if (!lightbox.classList.contains('active')) return;
