--- a/index.html
+++ b/index.html
@@ -1139,11 +1139,11 @@ function loadImage(index) {
     gestureSettingsTouch: {
       pinchToZoom: true,
       flickEnabled: true,
-      flickMomentum: 0.9,
-      flickMinSpeed: 0.3
+      flickMomentum: 0.95,  // Increased from 0.9 - more inertia on mobile
+      flickMinSpeed: 0.2    // Decreased from 0.3 - easier to trigger flick
     },
-    animationTime: 1.2,
-    springStiffness: 6.5,
+    animationTime: 1.5,      // Increased from 1.2 - smoother animations
+    springStiffness: 5.0,    // Decreased from 6.5 - more fluid/less stiff
     zoomPerClick: 1.4,
     zoomPerScroll: 1.08,
     immediateRender: true,
@@ -1270,7 +1270,7 @@ lightboxViewer.addEventListener('touchend', (e) => {
   touchEndX = e.changedTouches[0].clientX;
   touchEndY = e.changedTouches[0].clientY;
   
-  const swipeThreshold = 75; // Minimum distance for swipe
+  const swipeThreshold = 120; // Increased from 75 to 120 - less sensitive
   const swipeDistanceX = touchEndX - touchStartX;
   const swipeDistanceY = touchEndY - touchStartY;
   
