--- a/about.html
+++ b/about.html
@@ -285,7 +285,15 @@ footer a:hover {
 
 @media (max-width: 768px) {
   header {
-    padding: 15px;
+    padding: 15px 20px;
+  }
+  
+  .header-content {
+    margin-left: 0;
+  }
+  
+  .logo img {
+    height: 35px;
   }
   
   .about-content {
