--- a/index.html
+++ b/index.html
@@ -1139,11 +1139,11 @@ function loadImage(index) {
     gestureSettingsTouch: {
       pinchToZoom: true,
       flickEnabled: true,
-      flickMomentum: 0.95,  // Increased from 0.9 - more inertia on mobile
-      flickMinSpeed: 0.2    // Decreased from 0.3 - easier to trigger flick
+      flickMomentum: 0.97,  // Increased to 0.97 - even more inertia on mobile
+      flickMinSpeed: 0.15   // Decreased to 0.15 - very easy to trigger flick
     },
-    animationTime: 1.5,      // Increased from 1.2 - smoother animations
-    springStiffness: 5.0,    // Decreased from 6.5 - more fluid/less stiff
+    animationTime: 1.7,      // Increased to 1.7s - very smooth animations
+    springStiffness: 4.7,    // Decreased to 4.7 - very fluid
     zoomPerClick: 1.4,
     zoomPerScroll: 1.08,
     immediateRender: true,
