--- a/index.html
+++ b/index.html
@@ -1270,7 +1270,7 @@ lightboxViewer.addEventListener('touchend', (e) => {
   touchEndX = e.changedTouches[0].clientX;
   touchEndY = e.changedTouches[0].clientY;
   
-  const swipeThreshold = 120; // Increased from 75 to 120 - less sensitive
+  const swipeThreshold = 180; // Increased to 180px - much less sensitive
   const swipeDistanceX = touchEndX - touchStartX;
   const swipeDistanceY = touchEndY - touchStartY;
   
