--- a/index.html
+++ b/index.html
@@ -1270,7 +1270,7 @@ lightboxViewer.addEventListener('touchend', (e) => {
   touchEndX = e.changedTouches[0].clientX;
   touchEndY = e.changedTouches[0].clientY;
   
-  const swipeThreshold = 180; // Increased to 180px - much less sensitive
+  const swipeThreshold = 230; // Increased to 230px - very deliberate swipe required
   const swipeDistanceX = touchEndX - touchStartX;
   const swipeDistanceY = touchEndY - touchStartY;
   
